--- a/client/src/organisms/QueueCard/QueueCard.css
+++ b/client/src/organisms/QueueCard/QueueCard.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  flex: 1 1 0;
-  border: 1px solid red;
+  padding: 0 1rem;
 }
 
 .queue-card__card {
